- Export to wave file. Thanks to FluidSynth exporting to a wave file is now possible. You could if you want convert this manually to an MP3 file using ffmpeg (https://ffmpeg.org/ffmpeg.html)
- MIDI to ABC now uses the midi2abc executable instead of the built-in conversion. This improves the import for multivoice tunes.
- ABC assist: Suggested chords now relative to key from header

1.3.8.4
- New: Export to HTML interactive.
    Exports the tunes using Jef Moine's excellent abc2svg. (thanks go to Seymour Shlien for this idea he already implemented in https://runabc.sourceforge.io/)
- Open most recent file on startup [mist]
- 40% faster syntax highlighting
- Find in files: selecting tune focused wrong tune sometimes
- ABC settings: Added 'Separate defaults per voice' checkbox to Voices tab
- ABC assist supports %%barnumbers (better to use %%measurenb instead)
- ABC assist supports %%percmap (similar to %%MIDI drummap)
- General MIDI 2 percussion instruments added to %%MIDI drummap
- ABC assist supports !marcato! and !editoral!
- Added Copy to Tune list right button menu
- Update to abc2xml version 233
- Chinese translation added (thanks Wu Xiaotian)
- ABC settings: appears slightly faster and some space was added between controls and the border
- Removed 'Insert musical symbol' from the menu and the toolbar.
  On Linux (Gnome) these menus were empty and ABC Assist does a better job of inserting symbols
- Fixed sliders on toolbar (Linux, Raspberry Pi)

1.3.8.5
- Export MIDI no longer includes the markers which are used for follow score
- Added tablet mode: when music score is maximized
    - Right click on score panel toggles full screen mode (Shift-Alt-F)
    - Left click on right quarter of the screen turns to next page
    - Left click on left quarter of the screen turns to previous page
- Fixed: follow score stopped working when screen in portrait mode